--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -1,39 +1,79 @@
 @charset "utf-8";
 
-/*html, body {*/
-/*    font-family : Helvetica, Arial, sans-serif;*/
-/*    margin : 0;*/
-/*    background-color : #f0f0f0;*/
-/*}*/
+html, body {
+    font-family : Helvetica, Arial, sans-serif;
+    margin : 0;
+    background-color : #f0f0f0;
+}
+ul, li, ol {
+    list-style : none;
+}
+a {
+    text-decoration : none;
+}
 
-/*ul, li, ol {*/
-/*    list-style : none;*/
-/*}*/
-/*a {*/
-/*    text-decoration : none;*/
-/*}*/
+.container {
+    display : flex;
+    flex-direction : column;
+    width : 1240px;
+    margin : 0 auto;
+}
 
-/*.container {*/
-/*    display : flex;*/
-/*    flex-direction : column;*/
-/*}*/
+.header {}
 
-/*.header {}*/
+.header .header_menu {
+    margin : 0 20px 0 0;
+    text-align : right
+}
 
-/*.header .header_menu {*/
-/*    text-align : right*/
-/*}*/
+.header .header_menu a {
+    color : #444;
+    padding : 8px 0 6px 10px;
+    display : inline-block;
+}
 
-/*.header .header_menu a {*/
-/*    color : #fff;*/
-/*    padding : 8px 0 6px 10px;*/
-/*    display : inline-block;*/
-/*}*/
+.header .header_tit {
+    font-size : 30px;
+    color : #999;
+    text-align : center;
+    white-space: nowrap;
+}
 
-h1{
-    color:red;
-    font-size: 30px;
-    font-weight: normal;
-    margin: 2px;
-    margin-bottom: 10px;
+.column {
+    padding : 15px;
+    border-bottom : 1px solid #dbdbdb;
+}
+
+.column .col_tit {
+    font-size : 20px;
+    color : #2f7fa6;
+    padding-bottom:5px;
+}
+.menu {
+    display : flex;
+    flex-direction : row;
+    justify-content : space-between;
+}
+@media(max-width:1024px) {
+    .menu {
+        display : flex;
+        flex-direction: column;
+    }
+    .container {
+        width : 100%;
+    }
+}
+
+.item {
+    flex-basis : 25%;
+}
+
+.menu .item a {
+    font-size : 16px;
+    color : #878787;
+    border-bottom : 1px solid #dbdbdb;
+    padding : 10px;
+    display : block;
+    margin-right : 15px;
+    text-align : center;
 }
