--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -12,7 +12,6 @@ a {
     text-decoration : none;
 }
 .wrapper {
-    /*display : flex;*/
     display : flex;
     min-height : 100vh;
     flex-direction : column;
@@ -24,26 +23,54 @@ main {
 .container {
     display : flex;
     flex-direction : column;
-    width : 1024px;
+    width : 900px;
     margin : 0 auto;
 }
 
 .column {
     padding : 15px;
-    border-bottom : 1px solid #dbdbdb;
-
 }
 
 .column .col_tit {
     font-size : 20px;
     color : #2f7fa6;
     padding-bottom:5px;
+    margin-left : 30px;
 }
 .menu {
     display : flex;
     flex-direction : row;
     justify-content : space-between;
 }
+.item-heading{
+    text-align : center;
+    font-weight: bold;
+    background-color : #f0f0f0;
+    color : #878787;
+    cursor : pointer;
+    margin-right : 15px;
+    padding : 10px;
+    font-size : 16px;
+    outline: none;
+}
+
+.button{
+    border : none;
+    outline : none;
+    font-weight: bold;
+    color : #878787;
+    font-size : 16px;
+    border-bottom : 1px solid #dbdbdb;
+}
+.item {
+    padding : 10px;
+    display : none;
+}
+
+.active .item {
+    display : block;
+}
+
 @media(max-width:1024px) {
     .menu {
         display : flex;
@@ -53,36 +80,43 @@ main {
         width : 100%;
     }
 
-    .item {
-        padding : 10px;
-        display : none;
+    .item-heading{
+        border-bottom : 1px solid #dbdbdb;
     }
+
     .active + .item {
         display : block;
     }
-    .item-heading{
-        text-align : center;
+
+    .button{
+        border : none;
+        outline : none;
         font-weight: bold;
-        background-color : #f0f0f0;
         color : #878787;
-        cursor : pointer;
-        margin-right : 15px;
-        padding : 10px;
-        border-bottom : 1px solid #dbdbdb;
         font-size : 16px;
+    }
+    #cont_bottom {
+        display : none;
     }
 }
 
-.items {
-    flex-basis : 25%;
+iframe {
+    width : 100%;
+    border : 0;
+    height : 50vh;
 }
-
-.menu .items a {
+table {
+    width : 100%;
+    text-align : center;
+    border-top : 3px solid lightblue;
+    border-collapse: collapse;
     font-size : 16px;
     color : #878787;
-    border-bottom : 1px solid #dbdbdb;
+}
+th, td{
+    border-bottom : 3px solid lightblue;
     padding : 10px;
-    display : block;
-    margin-right : 15px;
-    text-align : center;
+}
+.items {
+    flex-basis : 25%;
 }
