--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -74,8 +74,10 @@ main {
     padding: 10px;
     display: none;
 }
-
 .active .item {
+    display : block;
+}
+.active + .item {
     display: block;
 }
 
@@ -110,65 +112,6 @@ main {
 
     #cont_bottom {
         display: none;
-    }
-    #sideNav, #sideNav + span {
-        display: block;
-    }
-    .sidebar {
-        height: 100%;
-        width: 0;
-        position: fixed;
-        z-index: 1;
-        top: 0;
-        left: 0;
-        background-color: #555555;
-        overflow-x: hidden;
-        transition: 0.5s;
-        padding-top: 60px;
-    }
-
-    .sidebar a {
-        word-break: keep-all;
-        padding: 8px 8px 8px 32px;
-        text-decoration: none;
-        font-size: 25px;
-        color: #dbdbdb;
-        display: block;
-        transition: 0.3s;
-    }
-
-    .sidebar a:hover {
-        color: #2f7fa6;
-    }
-
-    .sidebar .closebtn {
-        position: absolute;
-        top: 0;
-        right: 25px;
-        font-size: 30px;
-        margin-left: 50px;
-    }
-
-    span {
-        cursor: pointer;
-        min-width: 30px;
-        white-space: nowrap;
-        font-size: 20px;
-        color: #2f7fa6;
-        padding-bottom: 5px;
-        margin-left: 30px;
-    }
-    .open, .col_man {
-        font-size: 20px;
-        color: #2f7fa6;
-        padding-bottom: 5px;
-        margin-left: 30px;
-    }
-    .man {
-        display : block;
-    }
-    .man2 {
-        display : none;
     }
 }
 
