뭐 이것 저것

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -80,7 +80,12 @@ main {
 .active + .item {
     display: block;
 }
-
+.manMenu {
+    display : none;
+}
+.isMan {
+    display : block;
+}
 #sideNav, #sideNav + span {
     display: none;
 }
